--- a/src/aboutMe/AboutMe.css
+++ b/src/aboutMe/AboutMe.css
@@ -1,6 +1,6 @@
 #aboutMeBackground {
     /*height: calc(100vh - 48px);*/
-    height: 100vh;
+    min-height: 100vh;
     background: url(../resources/aboutMe/shutterstock_1091763119_flipped.jpg) no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
