--- a/src/aboutMe/AboutMe.css
+++ b/src/aboutMe/AboutMe.css
@@ -1,9 +1,29 @@
 #aboutMeBackground {
     /*height: calc(100vh - 48px);*/
     min-height: 100vh;
+    width: 100%;
     background: url(../resources/aboutMe/shutterstock_1091763119_flipped.jpg) no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
+}
+
+
+.aboutMeCard {
+    display: flex;
+    flex-direction: column;
+    width: 80%;
+    margin-right: 0;
+    margin-left: auto
+}
+
+@media (min-width: 1024px) {
+    .aboutMeCard {
+        display: flex;
+        flex-direction: column;
+        width: 40%;
+        margin-right: 0;
+        margin-left: auto
+    }
 }
