--- a/src/aboutMe/AboutMe.css
+++ b/src/aboutMe/AboutMe.css
@@ -1,5 +1,4 @@
 #aboutMeBackground {
-    /*height: calc(100vh - 48px);*/
     min-height: 100vh;
     width: 100%;
     background: url(../resources/aboutMe/shutterstock_1091763119_flipped.jpg) no-repeat center center fixed;
@@ -7,6 +6,7 @@
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
+    padding-top: 20px;
 }
 
 
